# sgx-pytorch

./: .gitignore  .gitmodules  CMakeLists.txt
aten/src/ATen/: Context.cpp  Context.h
aten/src/ATen/native/mkldnn/: Conv.cpp  Linear.cpp  MKLDNNCommon.cpp  Normalization.cpp
caffe2/ideep/operators/: conv_op.cc
caffe2/ideep/operators/quantization/: int8_conv_op.cc
cmake/: Dependencies.cmake
enclave_ops/deployproxy/: Makefile
enclave_ops/deployproxy/App/: main.cpp  sample_ra_msg.h  socket_client.cpp  socket_client.h
enclave_ops/deployproxy/Enclave/: enclave.cpp  enclave.edl
enclave_ops/deployserver/: Makefile
enclave_ops/deployserver/App/: sample_ra_msg.h  socket_server.cpp  socket_server.h
enclave_ops/ideep-enclave/: Makefile
enclave_ops/ideep-enclave/App/: App.cpp  ocall.c
enclave_ops/ideep-enclave/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  test.cpp
enclave_ops/ideep-enclave/Include/: dnnl_version.h
enclave_ops/secure_op/: CMakeLists.txt  README  op.cpp
enclave_ops/test/: resnet_load.py  resnet_save.py  whole_resnet.py
torch/lib/libshm/: CMakeLists.txt
torch/utils/: secure_mkldnn.py
